versioned_docs/version-1.0/client-api/querying/handling-document-relationships.mdx
---
title: "Handling document relationships"
hide_table_of_contents: true
sidebar_label: Handling document relationships
sidebar_position: 4
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Handling document relationships

One of the design principles that RavenDB adheres to is the idea that documents are independent, meaning all data required to process a document is stored within the document itself. However, this doesn't mean there should not be relations between objects.

There are valid scenarios where we need to define relationships between objects. By doing so, we expose ourselves to one major problem: whenever we load the containing entity, we are going to need to load data from the referenced entities too (unless we are not interested in them). While the alternative of storing the whole entity in every object graph it is referenced in seems cheaper at first, this proves to be quite costly in terms of database resources and network traffic.

RavenDB offers three elegant approaches to solve this problem. Each scenario will need to use one or more of them. When applied correctly, they can drastically improve performance, reduce network bandwidth and speedup development.

The concepts behind this topic and other related subjects are discussed in length in the Theory section.

## Denormalization

The easiest solution is to denormalize the data within the containing entity, forcing it to contain the actual value of the referenced entity in addition (or instead) of the foreign key.

Take this JSON document for example:

```json 
  { // Order document with id: orders/1234
    "Customer": {
      "Name": "Itamar",
      "Id": "customers/2345"
    },
    Items: [
      { 
        "Product": { 
          "Id": "products/1234",
          "Name": "Milk",
          "Cost": 2.3
          },
        "Quantity": 3
      }
    ]
  }
{CODE-END/}

As you can see, the `Order` document now contains denormalized data from both the `Customer` and the `Product` documents, which are saved elsewhere in full. Note we won't have copied all the customer properties into the order; instead we just clone the ones that we care about when displaying or processing an order. This approach is called _denormalized reference_.

The denormalization approach avoids many cross document lookups and results in only the necessary data being transmitted over the network, but it makes other scenarios more difficult. For example, consider the following entity structure as our start point:

<TabItem value="order_classes_basic" label="order_classes_basic">
<CodeBlock language="csharp">
{`public class Order
\{
	public string CustomerId \{ get; set; \}
	public string[] SupplierIds \{ get; set; \}
	public Referral Referral \{ get; set; \}
	public LineItem[] LineItems \{ get; set; \}
	public double TotalPrice \{ get; set; \}
\}

public class Customer
\{
	public string Name \{ get; set; \}
	public string Address \{ get; set; \}
	public short Age \{ get; set; \}
	public string HashedPassword \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

If we know that whenever we load an `Order` from the database we will need to know the customer's name and address, we could decide to create a denormalized `Order.Customer` field, and store those details in the directly in the `Order` object. Obviously, the password and other irrelevant details will not be denormalized:

<TabItem value="order_classes_denormalizedcustomer" label="order_classes_denormalizedcustomer">
<CodeBlock language="csharp">
{`public class DenormalizedCustomer
\{
	public int Id \{ get; set; \}
	public string Name \{ get; set; \}
	public string Address \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

There wouldn't be a direct reference between the `Order` and the `Customer`. Instead, `Order` holds a `DenormalizedCustomer`, which contains the interesting bits from `Customer` that we need whenever we process `Order` objects.

But, what happens when the user's address is changed? We will have to perform an aggregate operation to update all orders this customer has made. And what if the customer has a lot of orders or changes their address frequently? Keeping these details in sync could become very demanding on the server. What if another process that works with orders needs a different set of customer properties? The `DenormalizedCustomer` will need to be expanded, possibly to the point that the majority of the customer record is cloned.

Denormalization is a viable solution for rarely changing data, or for data that must remain the same despite the underlying referenced data changing over time.

## Includes

The RavenDB "Includes" feature addresses the limitations of denormalization. Instead of one object containing copies of the properties from another object, it is only necessary to hold a reference to the second object. Then RavenDB can be instructed to pre-load the referenced document at the same time that the root object is retrieved. We can do this using:

<TabItem value="includes1" label="includes1">
<CodeBlock language="csharp">
{`var order = session.Include<Order>(x => x.CustomerId)
	.Load("orders/1234");

// this will not require querying the server!
var cust = session.Load<Customer>(order.CustomerId);
`}
</CodeBlock>
</TabItem>

Above we are asking RavenDB to retrieve the `Order` "orders/1234" and at the same time "include" the `Customer` referenced by the `Order.CustomerId` property. The second call to `Load()` is resolved completely client side (i.e. without a second request to the RavenDB server) because the relevant `Customer` object has already been retrieved (this is the full `Customer` object not a denormalized version). You can also use Includes with queries:

<TabItem value="includes2" label="includes2">
<CodeBlock language="csharp">
{`var orders = session.Query<Order>()
	.Customize(x => x.Include<Order>(o => o.CustomerId))
	.Where(x => x.TotalPrice > 100)
	.ToList();

foreach (var order in orders)
\{
	// this will not require querying the server!
	var cust = session.Load<Customer>(order.CustomerId);
\}
`}
</CodeBlock>
</TabItem>

Under the hood, this works because RavenDB has two channels through which it can return information in response to a load request. The first is the Results channel, through which the root object retrieved by the `Load()` method call is returned. The second is the Includes channel, through which any included documents are sent back to the client. Client side, those included documents are not returned from the `Load()` method call, but they are added to the session unit of work, and subsequent requests to load them are served directly from the session cache, without requiring any additional queries to the server.

### One to many includes

Include can be used with a many to one relationship. In the above classes, an `Order` has a property `SupplierIds` which contains an array of references to `Supplier` documents. The following code will cause the suppliers to be pre-loaded:

<TabItem value="includes3" label="includes3">
<CodeBlock language="csharp">
{`var order = session.Include<Order>(x => x.SupplierIds)
	.Load("orders/1234");

foreach (var supplierId in order.SupplierIds)
\{
	// this will not require querying the server!
	var supp = session.Load<Supplier>(supplierId);
\}
`}
</CodeBlock>
</TabItem>

Again, the calls to `Load()` within the `foreach` loop will not require a call to the server as the `Supplier` objects will already be loaded into the session cache.

### Secondary level includes

An Include does not need to work only on the value of a top level property within a document. It can be used to load a value from a secondary level. In the classes above, the `Order` contains a `Referral` property which is of the type:

<TabItem value="order_classes_referral" label="order_classes_referral">
<CodeBlock language="csharp">
{`public class Referral
\{
	public string CustomerId \{ get; set; \}
	public double CommissionPercentage \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

This class contains an identifier for a `Customer`. The following code will include the document referenced by that secondary level identifier:

<TabItem value="includes4" label="includes4">
<CodeBlock language="csharp">
{`var order = session.Include<Order>(x => x.Referral.CustomerId)
	.Load("orders/1234");

// this will not require querying the server!
var referrer = session.Load<Customer>(order.Referral.CustomerId);
`}
</CodeBlock>
</TabItem>

This secondary level include will also work with collections. The `Order.LineItems` property holds a collection of `LineItem` objects which each contain a reference to a `Product`:

<TabItem value="order_classes_lineitem" label="order_classes_lineitem">
<CodeBlock language="csharp">
{`public class LineItem
\{
	public string ProductId \{ get; set; \}
	public string Name \{ get; set; \}
	public int Quantity \{ get; set; \}
	public double Price \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

The `Product` documents can be included using this syntax:

<TabItem value="includes5" label="includes5">
<CodeBlock language="csharp">
{`var order = session.Include<Order>(x => x.LineItems.Select(li => li.ProductId))
	.Load("orders/1234");

foreach (var lineItem in order.LineItems)
\{
	// this will not require querying the server!
	var product = session.Load<Product>(lineItem.ProductId);
\}
`}
</CodeBlock>
</TabItem>

The `Select()` within the Include tells RavenDB which property of secondary level objects to use as a reference.

### ValueType identifiers

The above `Include` samples assume that the Id property being used to resolve a reference is a string and it contains the full identifier for the referenced document (e.g. the `CustomerId` property will contain a value such as `"customers/5678"`). Include can also work with Value Type identifiers. Given these entities:

<TabItem value="order_classes2" label="order_classes2">
<CodeBlock language="csharp">
{`public class Order2
\{
	public int Customer2Id \{ get; set; \}
	public Guid[] Supplier2Ids \{ get; set; \}
	public Referral2 Referral2 \{ get; set; \}
	public LineItem2[] LineItem2s \{ get; set; \}
	public double TotalPrice \{ get; set; \}
\}

public class Customer2
\{
	public int Id \{ get; set; \}
	public string Name \{ get; set; \}
	public string Address \{ get; set; \}
	public short Age \{ get; set; \}
	public string HashedPassword \{ get; set; \}
\}

public class Referral2
\{
	public int Customer2Id \{ get; set; \}
	public double CommissionPercentage \{ get; set; \}
\}

public class LineItem2
\{
	public Guid Product2Id \{ get; set; \}
	public string Name \{ get; set; \}
	public int Quantity \{ get; set; \}
	public double Price \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

The samples above can be re-written as follows:

<TabItem value="includes1_2" label="includes1_2">
<CodeBlock language="csharp">
{`var order = session.Include<Order2, Customer2>(x => x.Customer2Id)
	.Load("orders/1234");

// this will not require querying the server!
var cust2 = session.Load<Customer2>(order.Customer2Id);
`}
</CodeBlock>
</TabItem>

<TabItem value="includes2_2" label="includes2_2">
<CodeBlock language="csharp">
{`var orders = session.Query<Order2>()
	.Customize(x => x.Include<Order2, Customer2>(o => o.Customer2Id))
	.Where(x => x.TotalPrice > 100)
	.ToList();

foreach (var order in orders)
\{
	// this will not require querying the server!
	var cust2 = session.Load<Customer2>(order.Customer2Id);
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="includes3_2" label="includes3_2">
<CodeBlock language="csharp">
{`var order = session.Include<Order2, Supplier2>(x => x.Supplier2Ids)
	.Load("orders/1234");

foreach (var supplier2Id in order.Supplier2Ids)
\{
	// this will not require querying the server!
	var supp2 = session.Load<Supplier2>(supplier2Id);
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="includes4_2" label="includes4_2">
<CodeBlock language="csharp">
{`var order = session.Include<Order2, Customer2>(x => x.Referral2.Customer2Id)
	.Load("orders/1234");

// this will not require querying the server!
var referrer2 = session.Load<Customer2>(order.Referral2.Customer2Id);
`}
</CodeBlock>
</TabItem>

<TabItem value="includes5_2" label="includes5_2">
<CodeBlock language="csharp">
{`var order = session.Include<Order2, Product2>(x => x.LineItem2s.Select(li => li.Product2Id))
.Load("orders/1234");

foreach (var lineItem2 in order.LineItem2s)
\{
	// this will not require querying the server!
	var product2 = session.Load<Product2>(lineItem2.Product2Id);
\}
`}
</CodeBlock>
</TabItem>

The second parameter to the generic `Include&lt;T, TInclude&gt;` specifies which document collection the reference is pointing to. RavenDB will combine the name of the collection with the value of the reference property to find the full identifier of the referenced document. For example, from the first example, if the value of the `Order.Customer2Id` property is the integer 56, RavenDB will include the document with an Id of "customer2s/56" from the database. The `Session.Load&lt;Customer2&gt;()` method will be passed the value 56 and will look for then load the document "customer2s/56" from the session cache.

## Live Projections

Using Includes is very powerful, but sometimes we want to do even more complex manipulation. The Live Projection feature is unique to RavenDB, and it can be thought of as the third step of the Map/Reduce operation: after having mapped all data, and it has been reduced (if the index is a Map/Reduce index), the RavenDB server can additionally transform the results into a completely different data structure and return that back instead of the original results.

Using the Live Projections feature, you have more control over what to load into the result entity, and since it returns a projection of the original entity, you also get the chance to filter out properties you do not need.

Let's look at an example to show how it can be used. Assuming we have many `User` entities and many of them are actually an alias for another user. If we wanted to display all users with their aliases using `Include()`, we would probably need to write something like this:

<TabItem value="liveprojections1" label="liveprojections1">
<CodeBlock language="csharp">
{`// Storing a sample entity
var entity = new User \{Name = "Ayende"\};
session.Store(entity);
session.Store(new User \{Name = "Oren", AliasId = entity.Id\});
session.SaveChanges();

// ...
// ...

// Get all users, mark AliasId as a field we want to use for Including
var usersWithAliases = from user in session.Query<User>().Include(x => x.AliasId)
                       where user.AliasId != null
                       select user;

var results = new List<UserAndAlias>(); // Prepare our results list
foreach (var user in usersWithAliases)
\{
	// For each user, load its associated alias based on that user Id
	results.Add(new UserAndAlias
	            	\{
	            		UserName = user.Name,
	            		Alias = session.Load<User>(user.AliasId).Name
	            	\}
		);
\}
`}
</CodeBlock>
</TabItem>

Since we use Includes, the server will only be accessed once - which is good, but the entire object graph for each referenced document (user entity for the alias) will be returned by the server... and it's an awful lot of code to write too!

Using Live Projections, we can get the same end result much more easily and with the transformation applied on the server side. This code defines an index which performs a Live Projection:

<TabItem value="liveprojections2" label="liveprojections2">
<CodeBlock language="csharp">
{`public class Users_ByAlias : AbstractIndexCreationTask<User>
\{
	public Users_ByAlias()
	\{
		Map = users => from user in users
		               select new \{user.AliasId\};

		TransformResults =
			(database, users) => from user in users
								 let alias = database.Load<User>(user.AliasId)
								 select new \{ Name = user.Name, Alias = alias.Name \};
	\}
\}
`}
</CodeBlock>
</TabItem>

The function declared in `TransformResults` will be executed on the results of the query, which gives it the opportunity to modify, extend or filter those results. In this case, it lets us look at data from another document and use it to project a new return type.

A Live Projection will return a projection, on which you can use the `.As&lt;&gt;` clause to convert it back to a type known by your application:

<TabItem value="liveprojections3" label="liveprojections3">
<CodeBlock language="csharp">
{`var usersWithAliases =
	(from user in session.Query<User, Users_ByAlias>()
	 where user.AliasId != null
	 select user).As<UserAndAlias>();
`}
</CodeBlock>
</TabItem>

The main benefits of using Live Projections are; not having to write as much code, they run on the server and they reduce the network bandwidth by returning only the data we are interested in.

<Admonition type="note" title="Note">
An important difference to note is that while Includes are useful for both explicit loading by id and for querying, Live Projections can only be used for querying.
</Admonition>

## Combining Approaches

It is possible to combine the above techniques. Using the `DenormalizedCustomer` from above and creating an order that uses it:

<TabItem value="order_classes_ordertodenormalizedcustomer" label="order_classes_ordertodenormalizedcustomer">
<CodeBlock language="csharp">
{`public class Order3
\{
	public DenormalizedCustomer Customer \{ get; set; \}
	public string[] SupplierIds \{ get; set; \}
	public Referral Referral \{ get; set; \}
	public LineItem[] LineItems \{ get; set; \}
	public double TotalPrice \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

We have the advantages of a denormalization, a quick and simple load of an `Order` and the fairly static `Customer` details that are required for most processing. But we also have the ability to easily and efficiently load the full `Customer` object when necessary using:

<TabItem value="includes6" label="includes6">
<CodeBlock language="csharp">
{`var order = session.Include<Order3, Customer2>(x => x.Customer.Id)
	.Load("orders/1234");

// this will not require querying the server!
var fullCustomer = session.Load<Customer2>(order.Customer.Id);
`}
</CodeBlock>
</TabItem>

This combining of denormalization and Includes could also be used with a list of denormalized objects.

It is possible to use Include on a query against a Live Projection. Includes are evaluated after the `TransformResults` has been evaluated. This opens up the possibility of implementing Tertiary Includes (i.e. retrieving documents that are referenced by documents that are referenced by the root document). 

Whilst RavenDB can support Tertiary Includes, before resorting to them you should re-evaluate your document model. Needing to use Tertiary Includes can be an indication that you are designing your documents along "Relational" lines.

## Summary

There are no strict rules as to when to use which approach, but the general idea is to give it a lot of thought, and consider the implications each approach has.

As an example, in an e-commerce application it might be better to denormalize product names and prices into an order line object, since you want to make sure the customer sees the same price and product title in the order history. But the customer name and addresses should probably be references, rather than denormalized into the order entity.

For most cases where denormalization is not an option, Includes are probably the answer. Whenever serious processing is required after the Map/Reduce work is done, or when you need a different entity structure returned than those defined by your index - take a look at Live Projections.